--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,21 +66,24 @@ h3 {
 .city-time h1 {
   margin: 0;
   margin-bottom: 0.2em;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .temp {
-  font-size: 6em;
+  font-size: 4em;
   margin: 0;
 }
 
 .weather img {
   display: block;
-  margin: 0.5em 0;
 }
 
 .icon {
-  height: 4em;
+  height: 2.5em;
+}
+
+.condition {
+  font-size: 0.55em;
 }
 
 .panel {
@@ -123,7 +126,7 @@ h3 {
   color: #000;
 }
 
-.search {
+.searchInput {
   background: none;
   border: none;
   border-bottom: 1px #ccc solid;
@@ -133,11 +136,11 @@ h3 {
   font-size: 1.1em;
 }
 
-.search:focus {
+.searchInput:focus {
   outline: none;
 }
 
-.search::placeholder {
+.searchInput::placeholder {
   color: #ccc;
 }
 
@@ -170,6 +173,39 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.day-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  gap: 0.5em;
+}
+
+.day-card-date {
+  font-size: 0.75rem;
+  color: hsl(200, 100%, 20%);
+}
+
+.day-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid hsl(200, 100%, 10%);
+  border-radius: 0.25rem;
+  padding: 1rem;
+  background: rgba(110, 110, 110, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  z-index: 1;
+}
+
+.weather-icon {
+  width: 40px;
+  height: 40px;
+  object-fit: none;
 }
 
 @media screen and (max-width: 800px) {
