--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,25 +107,37 @@ h3 {
   align-items: center;
   border: 1px solid hsl(200, 100%, 10%);
   border-radius: 0.25rem;
-  padding: 1rem;
+  padding: 0.2rem;
   background: rgba(110, 110, 110, 0.25);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 1;
+  margin: 0.3rem;
 }
 
 .icon-small {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   object-fit: cover;
+}
+
+.day-card-date {
+  font-size: 0.5em;
+}
+
+.temp-small,
+.humidity-small,
+.wind-small {
+  font-size: 0.5em;
+  margin-top: 0.5em;
 }
 
 /* The search panel and weather detail styles*/
 .panel {
   position: absolute;
-  width: 40%;
+  width: 35%;
   height: 100%;
   top: 0;
   right: 0;
@@ -151,7 +163,6 @@ h3 {
   margin: 0;
   border: none;
   outline: none;
-  background: #fa6d1b;
   color: #fff;
   cursor: pointer;
   font-size: 1.2em;
@@ -225,6 +236,27 @@ h3 {
 @media screen and (max-width: 500px) {
   html {
     font-size: 12px;
+  }
+
+  .icon-small {
+    width: 20px;
+    height: 20px;
+  }
+
+  .temp-small,
+  .humidity-small,
+  .wind-small {
+    font-size: 0.5em;
+    margin: 0.5em;
+    width: 7em;
+  }
+
+  .city-time h1 {
+    font-size: 1.5em;
+  }
+
+  .temp {
+    font-size: 3em;
   }
 }
 
