--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,6 +63,7 @@ h3 {
 .temp,
 .weather {
   margin: 0 1em;
+  font-size: 1.5em;
 }
 
 .city-time h1 {
@@ -72,7 +73,7 @@ h3 {
 }
 
 .temp {
-  font-size: 4em;
+  font-size: 7em;
   margin: 0;
 }
 
@@ -80,12 +81,17 @@ h3 {
   display: block;
 }
 
+.date,
+.time {
+  font-size: 1.4em;
+}
+
 .icon {
-  height: 2.5em;
+  height: 7em;
 }
 
 .condition {
-  font-size: 0.55em;
+  font-size: 1.5em;
 }
 
 /* The weather forecast card styles */
@@ -106,32 +112,33 @@ h3 {
   flex-direction: column;
   align-items: center;
   border: 1px solid hsl(200, 100%, 10%);
-  border-radius: 0.25rem;
-  padding: 0.2rem;
+  border-radius: 0.7rem;
+  padding: 2em 2.7em;
   background: rgba(110, 110, 110, 0.25);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 1;
-  margin: 0.3rem;
+  margin: 1.2em;
 }
 
 .icon-small {
-  width: 30px;
-  height: 30px;
+  width: 60px;
+  height: 60px;
   object-fit: cover;
+  margin-top: 1em;
 }
 
 .day-card-date {
-  font-size: 0.5em;
+  font-size: 1.3em;
 }
 
 .temp-small,
 .humidity-small,
 .wind-small {
-  font-size: 0.5em;
-  margin-top: 0.5em;
+  font-size: 1.3em;
+  margin-top: 1em;
 }
 
 /* The search panel and weather detail styles*/
@@ -224,12 +231,109 @@ h3 {
 }
 
 /* Media query for different screen sizes */
+@media screen and (max-width: 1440px) {
+  html {
+    font-size: 20px;
+  }
+
+  .city-time,
+  .temp,
+  .weather {
+    margin: 0 1em;
+    font-size: 1.3em;
+  }
+
+  .city-time h1 {
+    margin: 0;
+    margin-bottom: 0.2em;
+    font-size: 2em;
+  }
+
+  .temp {
+    font-size: 5em;
+    margin: 0;
+    margin-left: -0.2em;
+  }
+
+  .date,
+  .time {
+    font-size: 1em;
+  }
+
+  .icon {
+    height: 4em;
+  }
+
+  .condition {
+    font-size: 1em;
+  }
+
+  .day-section {
+    margin-left: -2em;
+  }
+
+  .day-card-date {
+    font-size: 0.4rem;
+  }
+
+  .day-card {
+    padding: 0.5em;
+    margin: 0.2em;
+  }
+
+  .icon-small {
+    width: 35px;
+    height: 35px;
+  }
+
+  .day-card-date {
+    font-size: 1em;
+  }
+
+  .temp-small,
+  .humidity-small,
+  .wind-small {
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .city-time,
+  .temp,
+  .weather {
+    font-size: 1em;
+  }
+
+  .temp {
+    font-size: 4em;
+  }
+
+  .condition {
+    font-size: 0.8em;
+  }
+
+  .day-card-date {
+    font-size: 0.7em;
+  }
+
+  .temp-small,
+  .humidity-small,
+  .wind-small {
+    font-size: 0.6em;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .panel,
   .container {
     position: relative;
     width: 100%;
     top: initial;
+  }
+
+  .day-section {
+    margin-top: 2.5em;
+    margin-left: 0em;
   }
 }
 
@@ -238,25 +342,65 @@ h3 {
     font-size: 12px;
   }
 
+  .city-time,
+  .temp,
+  .weather {
+    margin: 0 1em;
+    font-size: 1.3em;
+    margin-bottom: 2.5em;
+  }
+
+  .city-time h1 {
+    margin: 0;
+    margin-bottom: 0.2em;
+    font-size: 1.8em;
+  }
+
+  .temp {
+    font-size: 5em;
+    margin: 0;
+    margin-left: -0.5em;
+  }
+
+  .date,
+  .time {
+    font-size: 1.2em;
+  }
+
+  .icon {
+    height: 3.5em;
+  }
+
+  .condition {
+    font-size: 0.8em;
+  }
+
+  .day-section {
+    margin-left: -2em;
+  }
+
+  .day-card-date {
+    font-size: 0.4rem;
+  }
+
+  .day-card {
+    padding: 0.5em;
+    margin: 0.2em;
+  }
+
   .icon-small {
-    width: 20px;
-    height: 20px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .day-card-date {
+    font-size: 1em;
   }
 
   .temp-small,
   .humidity-small,
   .wind-small {
-    font-size: 0.5em;
-    margin: 0.5em;
-    width: 7em;
-  }
-
-  .city-time h1 {
-    font-size: 1.5em;
-  }
-
-  .temp {
-    font-size: 3em;
+    font-size: 1em;
   }
 }
 
