--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,8 +404,9 @@ h3 {
   }
 }
 
-@media screen and (max-height: 300px) {
+@media screen and (max-width: 300px) {
   .weather-app {
-    min-height: 40em;
+    width: 100%;
+    height: 100%;
   }
 }
